# Design-Pattern

./: .gitignore  0.builder_robot.cpp  0.builder_robot.h  1.factory_ufo.cpp  1.factory_ufo.h  10.protection_proxy.cpp  10.protection_proxy.h  10.virtual_proxy.cpp  10.virtual_proxy.h  11.strategy_pattern.cpp  11.strategy_pattern.h  12.decorator_pattern.cpp  12.decorator_pattern.h  12.decorator_pattern_1.cpp  12.decorator_pattern_1.h  13.command_pattern.cpp  13.command_pattern.h  14.template_method.cpp  14.template_method.h  15.iterator_pattern.cpp  15.iterator_pattern.h  15.iterator_pattern_2.cpp  15.iterator_pattern_2.h  16.composite_pattern.cpp  16.composite_pattern.h  17.state_pattern.cpp  17.state_pattern.h  18.flyweight.cpp  18.flyweight.h  19.Interpreter_pattern.cpp  19.Interpreter_pattern.h  19.Interpreter_pattern_2.cpp  19.Interpreter_pattern_2.h  2.abstract_factory.cpp  2.abstract_factory.h  20.mediator_pattern.cpp  20.mediator_pattern.h  3.concept_model_idiom.cpp  3.concept_model_idiom.h  4.prototype.cpp  (+50 more)
