cmake_minimum_required(VERSION 3.10)
project(design_pattern)

set(CMAKE_CXX_STANDARD 14)

add_executable(builder_robot builder_robot.cpp builder_robot.h)
add_executable(factory_ufo factory_ufo.cpp factory_ufo.h)
add_executable(abstract_factory abstract_factory.cpp abstract_factory.h)
add_executable(concept_model_idiom concept_model_idiom.cpp concept_model_idiom.h)
add_executable(prototype prototype.cpp prototype.h)
add_executable(singleton_pattern singleton_pattern.cpp singleton_pattern.h)
add_executable(adapter adapter.cpp adapter.h)
add_executable(bridge bridge.cpp bridge.h)
add_executable(compositePattern compositePattern.cpp compositePattern.h)
add_executable(observer_pattern observer_pattern.cpp observer_pattern.h)
add_executable(virtual_proxy virtual_proxy.cpp virtual_proxy.h)
add_executable(protection_proxy protection_proxy.cpp protection_proxy.h)
add_executable(strategy_pattern strategy_pattern.cpp strategy_pattern.h)
add_executable(decorator_pattern decorator_pattern.cpp decorator_pattern.h)
add_executable(try try.cpp)