cmake_minimum_required(VERSION 3.10)
project(design_pattern)

set(CMAKE_CXX_STANDARD 14)

add_executable(builder_robot 0.builder_robot.cpp 0.builder_robot.h)
add_executable(factory_ufo 1.factory_ufo.cpp 1.factory_ufo.h)
add_executable(abstract_factory 2.abstract_factory.cpp 2.abstract_factory.h)
add_executable(concept_model_idiom 3.concept_model_idiom.cpp 3.concept_model_idiom.h)
add_executable(prototype 4.prototype.cpp 4.prototype.h)
add_executable(singleton_pattern 5.singleton_pattern.cpp 5.singleton_pattern.h)
add_executable(adapter 6.adapter.cpp 6.adapter.h)
add_executable(bridge 7.bridge.cpp 7.bridge.h)
add_executable(compositePattern 8.compositePattern.cpp 8.compositePattern.h)
add_executable(observer_pattern 9.observer_pattern.cpp 9.observer_pattern.h)
add_executable(virtual_proxy 10.virtual_proxy.cpp 10.virtual_proxy.h)
add_executable(protection_proxy 10.protection_proxy.cpp 10.protection_proxy.h)
add_executable(strategy_pattern 11.strategy_pattern.cpp 11.strategy_pattern.h)
add_executable(decorator_pattern 12.decorator_pattern.cpp 12.decorator_pattern.h)
add_executable(observer_pattern_Csharp 9.observer_pattern_Csharp.cpp 9.observer_pattern.h)
add_executable(try try.cpp)